2003-05-19  Kjartan Maraas  <kmaraas@gnome.org>

	* glade/glade-gnome.c: (icon_entry_set_max_saved):
	* libgnomeui/gnome-icon-entry.c: (gnome_icon_entry_set_max_saved):
	* libgnomeui/gnome-icon-entry.h: Patch from Jacob Berkman that
	adds an API entry point to work around another being deprecated.
	Fixes bug #79324.

2003-05-15  Jaka Mocnik  <jaka@gnu.org>

	* libgnomeui/gnome-mdi.c: fixed referencing problems. sink the object
	instead of unrefing them. patch by Ecmel Ercan. this is actually not
	a Proper(tm) fix, but it serves its purpose: finalization is done
	properly. the Right Way(tm) would be to make GnomeMDI and
	GnomeMDIChild GObject descendants, but since the MDI API is
	deprecated, I won't bother.

2003-05-13  Anders Carlsson  <andersca@codefactory.se>

	* libgnomeui/gnome-app-helper.c: Accept both-horiz here too.

2003-05-09  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
                                                                                
        * configure.in: Added cy to ALL_LINGUAS

2003-05-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* configure.in: call AC_LIBTOOL_WIN32_DLL which is necessary for
	building shared library on win32 platform.

	* libgnomeui/Makefile.am (libgnomeui_2_la_LDFLAGS):
	* glade/Makefile.am (libgnome_la_LDFLAGS):
	add -no-undefined which is necessary for building shared library
	on some platforms (e.g. Win32, BeOS).

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-about.c: Pass NULL to g_string_new.
	* libgnomeui/gnome-app-helper.c: Same
	* libgnomeui/gnome-client.c: Reapply Arjan's leak
	patch. And don't break it in the process this time :-)
	Fixes bug #104986.

2003-04-23  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* libgnomeui/gnome-icon-theme.c (gnome_icon_theme_class_init):
	Set parent_class.
	(gnome_icon_theme_finalize): Chain parent_class' finalize.
