@@ -1,5 +1,10 @@
 2003-05-19  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* libgnomeui/gnome-ui-init.c: (libgnomeui_segv_handle): Merge fix
+	for bug #84778 from branch.
+
+2003-05-19  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* glade/glade-gnome.c: (icon_entry_set_max_saved):
 	* libgnomeui/gnome-icon-entry.c: (gnome_icon_entry_set_max_saved):
 	* libgnomeui/gnome-icon-entry.h: Patch from Jacob Berkman that
